# nix-alone

./: CMakeLists.txt  LICENSE  README.md
create_input/: read_data.py  snowpack_forcing_to_ssa_forcing.py  toolchain_forcing_to_ssa_forcing.py  utils.py
create_input/input_smet/: ANT.smet  MLS.smet  PERRIT.smet  SMM.smet
create_input/output/: WFJ_HS.txt
run/inp/: README  icon_15min_2021.inp
run_folder/: analysis.m  nix
run_folder/inp/: kenda.txt
scripts/input/smet/: DAV.smet  REH.smet  STG.smet
scripts/output/: WFJ_forcing.txt
scripts/python/: create_nixsa_input.ipynb
src/: allocation.f90  canopy.f90_DONOTCOMPILE  config.f90  fields.f90  input.f90  main.f90  mo_kind.f90  mo_nix_config.f90  mo_nix_constants.f90  mo_nix_heat_equation.f90  mo_nix_init.f90  mo_nix_main.f90  mo_nix_meteo_util.f90  mo_nix_misc_util.f90  mo_nix_output.f90  mo_nix_phase_change.f90  mo_nix_settling.f90  mo_nix_snow_util.f90  mo_nix_stratigraphy.f90  mo_nix_substrate.f90  mo_nix_water_transport.f90  mo_physical_constants.f90  output.f90
tests/: convert_smet_to_inp.awk  io_base.ini  run_test.sh  temporaldownscaling.sh
